--- a/frontend/webbapp/index.html
+++ b/frontend/webbapp/index.html
@@ -14,7 +14,7 @@
       href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap"
       rel="stylesheet"
     />
-    <title>städtjejerna</title>
+    <title>Städtjejerna i 7Härad | Låt städtjejerna göra jobbet</title>
   </head>
   <body>
     <div id="root"></div>
