--- a/frontend/webbapp/index.html
+++ b/frontend/webbapp/index.html
@@ -1,6 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <script
+      async
+      src="https://www.googletagmanager.com/gtag/js?id=G-SKB18BTS09"
+    ></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag() {
+        dataLayer.push(arguments);
+      }
+      gtag("js", new Date());
+
+      gtag("config", "G-SKB18BTS09");
+    </script>
     <meta charset="UTF-8" />
     <link
       rel="icon"
