--- a/frontend/webbapp/index.html
+++ b/frontend/webbapp/index.html
@@ -91,6 +91,14 @@
     />
 
     <title>Städtjejerna i 7Härad | Låt städtjejerna göra jobbet</title>
+    <script type="application/ld+json">
+      {
+        "@context": "https://schema.org",
+        "@type": "Organization",
+        "url": "https://www.stadtjejerna.se",
+        "logo": "https://i.imgur.com/Zcgk1vf.png"
+      }
+      </script>
   </head>
   <body>
     <div id="root"></div>
