--- a/frontend/webbapp/index.html
+++ b/frontend/webbapp/index.html
@@ -31,6 +31,7 @@
       type="image/svg+xml"
       href="https://i.imgur.com/Zcgk1vf.png"
     />
+    <link rel="preload" as="image" href="https://i.imgur.com/T0MT49r.jpeg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta
       name="description"
