removed font - nöjda kunder

--- a/frontend/webbapp/index.html
+++ b/frontend/webbapp/index.html
@@ -32,6 +32,7 @@
       href="https://i.imgur.com/Zcgk1vf.png"
     />
     <link rel="preload" as="image" href="https://i.imgur.com/T0MT49r.jpeg" />
+    <link rel="preload" as="image" href="https://stadtjejerna.se/stad1.webp" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta
       name="description"
