--- a/frontend/webbapp/index.html
+++ b/frontend/webbapp/index.html
@@ -33,6 +33,11 @@
     />
     <link rel="preload" as="image" href="https://i.imgur.com/T0MT49r.jpeg" />
     <link rel="preload" as="image" href="https://stadtjejerna.se/stad1.webp" />
+    <link
+      rel="preload"
+      as="image"
+      href="https://stadtjejerna.se/pexels-shvetsa-5217913.webp"
+    />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta
       name="description"
